telepathy-gabble (0.9.17-1) UNRELEASED; urgency=low

  * New upstream releases 0.9.16, 0.9.17
  * Standards-Version: 3.9.1 (no changes needed)

 -- Simon McVittie <smcv@debian.org>  Thu, 02 Sep 2010 10:37:17 +0100

telepathy-gabble (0.9.15-1) unstable; urgency=low

  * New upstream release
    - doesn't assert if the capabilities cache isn't valid (Closes: #586936)
  * Standards-Version: 3.9.0 (no changes needed)

 -- Simon McVittie <smcv@debian.org>  Wed, 30 Jun 2010 18:34:42 +0100

telepathy-gabble (0.9.14-1) unstable; urgency=low

  * New upstream release
    - fixes regressions in connecting to some servers (Closes: 586705)
  * Update outdated dependencies in debian/control to match configure.ac

 -- Simon McVittie <smcv@debian.org>  Tue, 22 Jun 2010 19:52:14 +0100

telepathy-gabble (0.9.13-1) unstable; urgency=low

  * New upstream release
  * Add libnice-dev to the build dependencies for google talk compatible
    file transfer

 -- Sjoerd Simons <sjoerd@debian.org>  Thu, 17 Jun 2010 15:21:02 +0100

telepathy-gabble (0.9.12-1) unstable; urgency=low

  * New upstream release
  * Stop linking telepathy-gabble doc dir to the telepathy-gabble-dbg,
    it breaks the build when building with dh_buildinfo
  * Add libsqlite3-dev to the build dependencies

 -- Sjoerd Simons <sjoerd@debian.org>  Fri, 04 Jun 2010 14:36:16 +0100

telepathy-gabble (0.9.11-1) unstable; urgency=low

  * New upstream release.
  * debian/control: Removed inactive maintainers from Uploaders.

 -- Jonny Lamb <jonny@debian.org>  Wed, 28 Apr 2010 10:40:43 +0100

telepathy-gabble (0.9.10-1) unstable; urgency=low

  * New upstream release.
  * debian/source/format: Added to ensure source format remains at 1.0.

 -- Jonny Lamb <jonny@debian.org>  Mon, 26 Apr 2010 10:23:19 +0100

telepathy-gabble (0.9.8-1) unstable; urgency=low

  * New upstream release.

 -- Jonny Lamb <jonny@debian.org>  Wed, 17 Mar 2010 13:57:49 +0000

telepathy-gabble (0.9.7-1) unstable; urgency=low

  * New upstream release