@@ -2,6 +2,7 @@ telepathy-gabble (0.9.17-1) UNRELEASED; urgency=low
 
   * New upstream releases 0.9.16, 0.9.17
   * Standards-Version: 3.9.1 (no changes needed)
+  * Switch to debhelper 8 and 3.0 (quilt) source format
 
  -- Simon McVittie <smcv@debian.org>  Thu, 02 Sep 2010 10:37:17 +0100
 
